--- a/frontend/basics.html
+++ b/frontend/basics.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>homepage</title>
+        <title>Horse Basics</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
@@ -12,6 +12,7 @@
         <h1>Horse Breeds 101</h1>
         <nav>
             <a href="index.html">Home</a>
+            <a href="breeds_db.html">Breeds Database</a>
             <a href="definitions.html">Common Horse Terms</a>
             <a href="basics.html">Horse Basics</a>
             <a href="gallery.html">Breed Gallery</a>
