--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
         <h1>Horse Breeds 101</h1>
         <nav>
             <a href="index.html">Home</a>
+            <a href="breeds_db.html">Breeds Database</a>
             <a href="definitions.html">Common Horse Terms</a>
             <a href="basics.html">Horse Basics</a>
             <a href="gallery.html">Breed Gallery</a>
