--- a/frontend/definitions.html
+++ b/frontend/definitions.html
@@ -19,5 +19,6 @@
             <a href="map.html">Breed Origins Map</a>
             <a href="comparison.html">Your Breed Comparison Table</a>
         </nav>
+        <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
