--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,10 @@
             <a href="map.html">Breed Origins Map</a>
             <a href="comparison.html">Your Breed Comparison Table</a>
         </nav>
+        <form action="table.html" method="GET">
+            <input type="text" name="query" placeholder="Search here" required>
+            <button type="submit">Search</button>
+        </form>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
