--- a/frontend/map.html
+++ b/frontend/map.html
@@ -19,6 +19,7 @@
             <a href="map.html">Breed Origins Map</a>
             <a href="comparison.html">Your Breed Comparison Table</a>
         </nav>
+        <p> placeholder for breed map </p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
