Add home search page, basic styling

--- a/frontend/map.html
+++ b/frontend/map.html
@@ -10,15 +10,15 @@
     </head>
     <body>
         <h1>Horse Breeds 101</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="breeds_db.html">Breeds Database</a>
-            <a href="definitions.html">Common Horse Terms</a>
-            <a href="basics.html">Horse Basics</a>
-            <a href="gallery.html">Breed Gallery</a>
-            <a href="map.html">Breed Origins Map</a>
-            <a href="comparison.html">Your Breed Comparison Table</a>
-        </nav>
+        <div class="nav">
+            <button onclick="window.location.href='index.html';">Home</button>
+            <button onclick="window.location.href='breeds_db.html';">Breeds Database</button>
+            <button onclick="window.location.href='definitions.html';">Common Horse Terms</button>
+            <button onclick="window.location.href='basics.html';">Horse Basics</button>
+            <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
+            <button onclick="window.location.href='map.html';">Breed Origins Map</button>
+            <button onclick="window.location.href='comparison.html';">Your Breed Comparison Table</button>
+        </div>
         <p> placeholder for breed map </p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
