upgraded style sheets

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
         </div>
         <div>
             <form action="breeds_db.html" method="GET">
-                <input type="text" name="query" placeholder="Search here" required>
+                <input type="text" name="query" placeholder="Search by breed, region, discipline, height, or temperament" required>
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
