--- a/frontend/breeds_db.html
+++ b/frontend/breeds_db.html
@@ -25,77 +25,87 @@
             <input id="localSearch" type="text" placeholder="Search here">
         </b>
         <p>Click a header to sort by that category!</p>
+        <p>Click breed name to learn more about the breed!</p>
         <table> 
             <tr>
                 <th>Breed</th>
                 <th>Average Minimum Height</th>
                 <th>Average Maximum Height</th>
                 <th>Region</th>
+                <th>Colors</th>
                 <th>Disciplines</th>
                 <th>Temperament</th>
             </tr>
             <tbody id="breeds">
                 <tr>
-                    <td>Andalusian</td>
+                    <td><a href="breed info/andalusian.html" title="Click here to learn more about Andalusians">Andalusian</a></td>
                     <td>15.2</td>
                     <td>16.2</td>
                     <td>Spain</td>
+                    <td>Gray, Bay</td>
                     <td>Dressage, Equitation, Western Pleasure</td>
                     <td>Smart, Sensitive, Docile</td>
                 </tr>
                 <tr>
-                    <td>Arabian</td>
+                    <td><a href="breed info/arabian.html" title="Click here to learn more about Arabians">Arabian</a></td>
                     <td>14.1</td>
                     <td>15.1</td>
                     <td>Middle East</td>
+                    <td>Gray, Bay, Chestnut, Black, Roan</td>
                     <td>Endurance, Pleasure Riding, Dressage, Jumping</td>
                     <td>Smart, Alert, Inquisitive</td>
                 </tr>
                 <tr>
-                    <td>Thoroughbred</td>
+                    <td><a href="breed info/thoroughbred.html" title="Click here to learn more about Thoroughbreds">Thoroughbred</a></td>
                     <td>15.2</td>
                     <td>16</td>
                     <td>England</td>
+                    <td>Bay, Chestnut, Black, Gray</td>
                     <td>Racing, Jumping</td>
                     <td>Smart, High Energy, Bold</td>
                 </tr>
                 <tr>
-                    <td>Irish Sport Horse</td>
+                    <td><a href="breed info/irishSportHorse.html" title="Click here to learn more about Irish Sport Horses">Irish Sport Horse</a></td>
                     <td>15</td>
                     <td>17</td>
                     <td>Ireland</td>
+                    <td>Black, Brown, Bay, Chestnut, Gray, Roan</td>
                     <td>Jumping, Eventing, Dressage</td>
                     <td>Smart, Bold</td>
                 </tr>
                 <tr>
-                    <td>Tennessee Walker</td>
+                    <td><a href="breed info/tennesseeWalker.html" title="Click here to learn more about Tennessee Walkers">Tennessee Walker</a></td>
                     <td>14.3</td>
                     <td>17</td>
                     <td>United States</td>
+                    <td>Bay, Black, Champagne, Chestnut, Sorrel</td>
                     <td>Driving, Pleasure, Halter, Trail</td>
                     <td>Quiet, Calm, Gentle</td>
                 </tr>
                 <tr>
-                    <td>Clydesdale</td>
+                    <td><a href="breed info/clydesdale.html" title="Click here to learn more about Clydesdales">Clydesdale</a></td>
                     <td>17</td>
                     <td>19</td>
                     <td>Scotland</td>
+                    <td>Bay</td>
                     <td>Driving, Pleasure Riding</td>
                     <td>Calm, Gentle</td>
                 </tr>
                 <tr>
-                    <td>Standardbred</td>
+                    <td><a href="breed info/standardbred.html" title="Click here to learn more about Standardbreds">Standardbred</a></td>
                     <td>15</td>
                     <td>16</td>
                     <td>United States</td>
+                    <td>Bay, Brown, Black, Gray, Chestnut</td>
                     <td>Racing, Endurance, Reining</td>
                     <td>Calm, Gentle, Loyal</td>
                 </tr>
                 <tr>
-                    <td>Quarter Horse</td>
+                    <td><a href="breed info/quarterHorse.html" title="Click here to learn more about Quarter Horses">Quarter Horse</a></td>
                     <td>14.3</td>
                     <td>16</td>
                     <td>United States</td>
+                    <td>Chestnut, Sorrel, Black, Brown, Gray, Palomino, Buckskin</td>
                     <td>Racing, Trail, Ranching</td>
                     <td>Trainable, Calm, Smart</td>
                 </tr>
