--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
         </div>
         <div>
             <form action="breeds_db.html" method="GET">
-                <input type="text" name="query" placeholder="Search by breed, region, discipline, height, or temperament" required>
+                <input type="text" name="query" placeholder="Search by breed, region, discipline, height, color or temperament" required>
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </div>
+        <h2>Welcome!</h2>
+        <h3>Great for horse shopping, education and more!</h3>
+        <ul>
+            <li>Search breeds by discipline, temperment, height or color to suit your needs!</li>
+            <li>Compare and contrast different breeds with our comparison table to determine what would work best for you.</li>
+            <li>Learn the basics of horses and horse anatomy.</li>
+            <li>Not sure what something means? Looks it up in our dictionary of common horse terms!</li>
+            <li>Explore breeds by region using our map feature!</li>
+            <li>Explore the gallery to find breed by appearance!</li>
+        </ul>
+
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
