--- a/breed info/standardbred.html
+++ b/breed info/standardbred.html
@@ -5,7 +5,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Horse Basics</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
         <script src='main.js'></script>
     </head>
     <body>
@@ -18,6 +18,7 @@
             <button onclick="window.location.href='../gallery.html';">Breed Gallery</button>
             <button onclick="window.location.href='../map.html';">Breed Origins Map</button>
             <button onclick="window.location.href='../comparison.html';">Your Breed Comparison Table</button>
+            <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Standardbred</h2>
         <h3>Typical Uses</h3>
