--- a/breeds_db.html
+++ b/breeds_db.html
@@ -5,7 +5,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>Breeds Database</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
         <script src='main.js'></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -19,6 +19,7 @@
             <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
             <button onclick="window.location.href='map.html';">Breed Origins Map</button>
             <button onclick="window.location.href='comparison.html';">Your Breed Comparison Table</button>
+            <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
         </div>
         <h2> Horse Breeds Database </h2>
         <b>Search the table for Breed, Average Minimum Height, Average Maximum Height, Region, Disciplines or Temperament:
