--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>homepage</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='home.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='css/home.css'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         <script src='main.js'></script>
     </head>
@@ -19,6 +19,7 @@
             <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
             <button onclick="window.location.href='map.html';">Breed Origins Map</button>
             <button onclick="window.location.href='comparison.html';">Your Breed Comparison Table</button>
+            <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
         </div>
         <div>
             <form action="breeds_db.html" method="GET">
