--- a/unit_conversion.html
+++ b/unit_conversion.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Breed Origins Map</title>
+        <title>Unit Converter</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
         <script src='main.js'></script>
@@ -20,7 +20,7 @@
             <button onclick="window.location.href='comparison.html';">Your Breed Comparison Table</button>
             <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
         </div>
-        <p> placeholder for breed map </p>
+        <p> placeholder for unit conversion </p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
