populate breed-info pages

--- a/public/breed info/arabian.html
+++ b/public/breed info/arabian.html
@@ -21,16 +21,20 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Arabian</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Common uses for Arabians include Endurance, Pleasure Riding, Dressage and Jumping. They are often well suited for high intensity sports 
+            due to their smart, alert and inquisitive nature.
+        </p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Gray, Bay, Chestnut, Black, Roan</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>14.1-15.1 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>Middle East</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The Arabian or Arab horse is a breed of horse with historic roots on the Arabian Peninsula. With a distinctive head shape 
+            and high tail carriage, the Arabian is one of the most easily recognizable horse breeds in the world. It is also one of 
+            the oldest modern breeds.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
