--- a/public/breed info/clydesdale.html
+++ b/public/breed info/clydesdale.html
@@ -21,16 +21,21 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Clydesdale</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Clydesdales are well suited for driving and pleasure riding. They are best suited for sports that don't require explosive movements, 
+            due to their size and calm/gentle nature. 
+        </p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Bay with white markings.</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>17-19 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>Scotland</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The Clydesdale is a Scottish breed of draught horse. It takes its name from Clydesdale, a region of Scotland centred
+             on the River Clyde. The origins of the breed lie in the seventeenth century, when Flemish stallions were imported 
+             to Scotland and mated with local mares; in the nineteenth century, Shire blood was introduced. The first recorded 
+             use of the name "Clydesdale" for the breed was in 1826.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
