--- a/public/breed info/irishSportHorse.html
+++ b/public/breed info/irishSportHorse.html
@@ -21,16 +21,18 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Irish Sport Horse</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Irish Sport Horses excel in Jumping, Eventing and Dressage due to their naturally athletic build and smart/bold nature.</p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Black, Brown, Bay, Chestnut, Gray, Roan</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>15-17 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>Ireland</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The Irish Sport Horse, or Irish Hunter, is an Irish breed of warmblood sporting horse, used mostly for dressage, 
+            eventing and show-jumping. It was bred from 1923 by cross-breeding of Irish Draught and Thoroughbred stock. 
+            There was some limited intromission of Hanoverian, Selle Français and Trakehner blood in the 1990s.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
