--- a/public/breed info/standardbred.html
+++ b/public/breed info/standardbred.html
@@ -21,16 +21,18 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Standardbred</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Standardbred excel in Racing, Endurance and Reining due to their athletic build and calm, gentle and loyal nature. They make great partners.</p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Bay, Brown, Black, Gray, Chestnut</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>15-16 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>United States</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The Standardbred is an American horse breed best known for its ability in harness racing where they compete at either
+             a trot or pace. Developed in North America, the Standardbred is recognized worldwide, and the breed can trace its 
+             bloodlines to 18th-century England. They are solid, well-built horses with good dispositions.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
