--- a/public/breed info/tennesseeWalker.html
+++ b/public/breed info/tennesseeWalker.html
@@ -21,16 +21,19 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Tennessee Walking Horses</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Tennessee walkers do well in Driving, Pleasure, Halter and Trail. They make great beginner horses due to their quiet, calm and gentle nature.</p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Bay, Black, Champagne, Chestnut, Sorrel</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>14.3-17 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>United States</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The breed was developed beginning in the late 18th century when Narragansett Pacers and Canadian Pacers from the eastern 
+            United States were crossed with gaited Spanish Mustangs from Texas. Other breeds were later added, and in 1886 a foal 
+            named Black Allan was born. He is now considered the foundation sire of the breed. In 1935 the Tennessee Walking Horse Breeders' 
+            Association was formed, and it closed the studbook in 1947.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
