--- a/public/breed info/thoroughbred.html
+++ b/public/breed info/thoroughbred.html
@@ -21,16 +21,21 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Thoroughbreds</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Throughbreds do well in very athletic sports like Racing, Jumping. They are often smart, high energy and bold.</p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Bay, Chestnut, Black, Gray</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>15.2-16hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>England</p>
         <h3>History</h3>
-        <p> </p>
+        <p>The Thoroughbred is a horse breed developed for horse racing. Although the word thoroughbred is sometimes used to refer to
+             any breed of purebred horse, it technically refers only to the Thoroughbred breed. Thoroughbreds are considered "hot-blooded" 
+             horses that are known for their agility, speed, and spirit. The Thoroughbred, as it is known today, was developed in 17th- 
+             and 18th-century England, when native mares were crossbred with imported stallions of Arabian, Barb, and Turkoman breeding.
+              All modern Thoroughbreds can trace their pedigrees to three stallions originally imported into England in the 17th and 18th
+               centuries, and to a larger number of foundation mares of mostly English breeding. </p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
