--- a/public/breed info/andalusian.html
+++ b/public/breed info/andalusian.html
@@ -21,8 +21,10 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Andalusians</h2>
-        <h3>Typical Uses</h3>
-        <p>Dressage, Equitation and Western Pleasure</p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Common uses for Andalusians include Dressage, Equitation and Western Pleasure. Although they are suitable for many sports due to their
+            smart, sensitive and docile nature.
+        </p>
         <h3>Typical Colors</h3>
         <p>Gray or Bay</p>
         <h3>Average Height</h3>
