--- a/public/breed info/quarterHorse.html
+++ b/public/breed info/quarterHorse.html
@@ -21,16 +21,20 @@
             <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Quarter Horse</h2>
-        <h3>Typical Uses</h3>
-        <p> </p>
+        <h3>Typical Uses and Temperament</h3>
+        <p>Quarter horses are well suited for Racing, Trail, and Ranching due to their trainable, calm and smart nature.</p>
         <h3>Typical Colors</h3>
-        <p> </p>
+        <p>Chestnut, Sorrel, Black, Brown, Gray, Palomino, Buckskin</p>
         <h3>Average Height</h3>
-        <p> </p>
+        <p>14.3-16 hh</p>
         <h3>Region of Origin</h3>
-        <p> </p>
+        <p>United States</p>
         <h3>History</h3>
-        <p> </p>
+        <p>In the 1600s, imported English Thoroughbred horses were first bred with assorted local horses on the Eastern seaboard of colonial
+             America. One of the most famous of these early imports was Janus, a Thoroughbred who was the grandson of the Godolphin Arabian. 
+             He was foaled in 1746, and imported to colonial Virginia in 1756. The influence of Thoroughbreds like Janus contributed genes 
+             crucial to the development of the colonial "Quarter Horse". The resulting horse was small, hardy, quick, and was used as a
+              work horse during the week and a race horse on the weekends.</p>
         <p><footer>&copy; 2024 Maren Cole</footer></p>
     </body>
     </html>
