--- a/public/definitions.html
+++ b/public/definitions.html
@@ -1,26 +1,62 @@
-<CTYPE html>
-    <html>
-    <head>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Common Horse Terms</title>
-        <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="site.webmanifest">
-    </head>
-    <body>
-        <h1>Horse Breeds 101</h1>
-        <div class="nav">
-            <button onclick="window.location.href='index.html';">Home</button>
-            <button onclick="window.location.href='breeds_db.html';">Breeds Database</button>
-            <button onclick="window.location.href='definitions.html';">Common Horse Terms</button>
-            <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
-            <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
-        </div>
-        <p> placeholder for horse Terms </p>
-        <p><footer>&copy; 2024 Maren Cole</footer></p>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Common Horse Terms</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <script>
+        async function fetchTerm(term) {
+            const response = await fetch(`http://localhost:6000/term-definition/${term}`);
+            const data = await response.json();
+            if (response.ok) {
+                return data;
+            } else {
+                throw new Error(data.error);
+            }
+        }
+
+        async function showDefinition() {
+            const searchInput = document.getElementById('searchInput').value;
+            const resultDiv = document.getElementById('result');
+            resultDiv.innerHTML = '';
+
+            try {
+                const termData = await fetchTerm(searchInput);
+                resultDiv.innerHTML = `
+                    <table>
+                        <tr><th>Term</th><th>Definition</th></tr>
+                        <tr><td>${termData.term}</td><td>${termData.definition}</td></tr>
+                    </table>
+                `;
+            } catch (error) {
+                resultDiv.innerHTML = `<p>${error.message}</p>`;
+            }
+        }
+    </script>
+</head>
+<body>
+    <h1>Horse Breeds 101</h1>
+    <div class="nav">
+        <button onclick="window.location.href='index.html';">Home</button>
+        <button onclick="window.location.href='breeds_db.html';">Breeds Database</button>
+        <button onclick="window.location.href='definitions.html';">Common Horse Terms</button>
+        <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
+        <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
+    </div>
+    <div>
+        <input type="text" id="searchInput" placeholder="Search for a term...">
+        <button onclick="showDefinition()">Search</button>
+    </div>
+    <div id="result">
+        <p>Placeholder for horse terms</p>
+    </div>
+    <footer>&copy; 2024 Maren Cole</footer>
+</body>
+</html>
+
