--- a/public/breed info/andalusian.html
+++ b/public/breed info/andalusian.html
@@ -11,14 +11,11 @@
     <body>
         <h1>Horse Breeds 101</h1>
         <div class="nav">
-            <button onclick="window.location.href='../index.html';">Home</button>
-            <button onclick="window.location.href='../breeds_db.html';">Breeds Database</button>
-            <button onclick="window.location.href='../definitions.html';">Common Horse Terms</button>
-            <button onclick="window.location.href='../basics.html';">Horse Basics</button>
-            <button onclick="window.location.href='../gallery.html';">Breed Gallery</button>
-            <button onclick="window.location.href='../map.html';">Breed Origins Map</button>
-            <button onclick="window.location.href='../comparison.html';">Your Breed Comparison Table</button>
-            <button onclick="window.location.href='../unit_conversion.html';">Unit Converter</button>
+            <button onclick="window.location.href='index.html';">Home</button>
+            <button onclick="window.location.href='breeds_db.html';">Breeds Database</button>
+            <button onclick="window.location.href='definitions.html';">Common Horse Terms</button>
+            <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
+            <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
         </div>
         <h2>Andalusians</h2>
         <h3>Typical Uses and Temperament</h3>
