--- a/public/breeds_db.html
+++ b/public/breeds_db.html
@@ -66,7 +66,7 @@
                     <td>Smart, High Energy, Bold</td>
                 </tr>
                 <tr>
-                    <td><a href="breed info/irishSportHorse.html" title="Click here to learn more about Irish Sport Horses">Irish Sport Horse</a></td>
+                    <td><a href="breed info/irish_sport_horse.html" title="Click here to learn more about Irish Sport Horses">Irish Sport Horse</a></td>
                     <td>15</td>
                     <td>17</td>
                     <td>Ireland</td>
@@ -75,7 +75,7 @@
                     <td>Smart, Bold</td>
                 </tr>
                 <tr>
-                    <td><a href="breed info/tennesseeWalker.html" title="Click here to learn more about Tennessee Walkers">Tennessee Walker</a></td>
+                    <td><a href="breed info/tennessee_walker.html" title="Click here to learn more about Tennessee Walkers">Tennessee Walker</a></td>
                     <td>14.3</td>
                     <td>17</td>
                     <td>United States</td>
@@ -102,7 +102,7 @@
                     <td>Calm, Gentle, Loyal</td>
                 </tr>
                 <tr>
-                    <td><a href="breed info/quarterHorse.html" title="Click here to learn more about Quarter Horses">Quarter Horse</a></td>
+                    <td><a href="breed info/quarter_horse.html" title="Click here to learn more about Quarter Horses">Quarter Horse</a></td>
                     <td>14.3</td>
                     <td>16</td>
                     <td>United States</td>
