implement unit converter

--- a/public/breeds_db.html
+++ b/public/breeds_db.html
@@ -40,8 +40,8 @@
             <tbody id="breeds">
                 <tr>
                     <td><a href="breed info/andalusian.html" title="Click here to learn more about Andalusians">Andalusian</a></td>
-                    <td>15.2</td>
-                    <td>16.2</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">15.2</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">16.2</a></td>
                     <td>Spain</td>
                     <td>Gray, Bay</td>
                     <td>Dressage, Equitation, Western Pleasure</td>
@@ -49,8 +49,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/arabian.html" title="Click here to learn more about Arabians">Arabian</a></td>
-                    <td>14.1</td>
-                    <td>15.1</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">14.1</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">15.1</a></td>
                     <td>Middle East</td>
                     <td>Gray, Bay, Chestnut, Black, Roan</td>
                     <td>Endurance, Pleasure Riding, Dressage, Jumping</td>
@@ -58,8 +58,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/thoroughbred.html" title="Click here to learn more about Thoroughbreds">Thoroughbred</a></td>
-                    <td>15.2</td>
-                    <td>16</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">15.2</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">16</a></td>
                     <td>England</td>
                     <td>Bay, Chestnut, Black, Gray</td>
                     <td>Racing, Jumping</td>
@@ -67,8 +67,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/irish_sport_horse.html" title="Click here to learn more about Irish Sport Horses">Irish Sport Horse</a></td>
-                    <td>15</td>
-                    <td>17</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">15</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">17</a></td>
                     <td>Ireland</td>
                     <td>Black, Brown, Bay, Chestnut, Gray, Roan</td>
                     <td>Jumping, Eventing, Dressage</td>
@@ -76,8 +76,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/tennessee_walker.html" title="Click here to learn more about Tennessee Walkers">Tennessee Walker</a></td>
-                    <td>14.3</td>
-                    <td>17</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">14.3</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">17</a></td>
                     <td>United States</td>
                     <td>Bay, Black, Champagne, Chestnut, Sorrel</td>
                     <td>Driving, Pleasure, Halter, Trail</td>
@@ -85,8 +85,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/clydesdale.html" title="Click here to learn more about Clydesdales">Clydesdale</a></td>
-                    <td>17</td>
-                    <td>19</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">17</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">19</a></td>
                     <td>Scotland</td>
                     <td>Bay</td>
                     <td>Driving, Pleasure Riding</td>
@@ -94,8 +94,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/standardbred.html" title="Click here to learn more about Standardbreds">Standardbred</a></td>
-                    <td>15</td>
-                    <td>16</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">15</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">16</a></td>
                     <td>United States</td>
                     <td>Bay, Brown, Black, Gray, Chestnut</td>
                     <td>Racing, Endurance, Reining</td>
@@ -103,8 +103,8 @@
                 </tr>
                 <tr>
                     <td><a href="breed info/quarter_horse.html" title="Click here to learn more about Quarter Horses">Quarter Horse</a></td>
-                    <td>14.3</td>
-                    <td>16</td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">14.3</a></td>
+                    <td><a href="unit_conversion.html" title="Click here to convert to a different unit">16</a></td>
                     <td>United States</td>
                     <td>Chestnut, Sorrel, Black, Brown, Gray, Palomino, Buckskin</td>
                     <td>Racing, Trail, Ranching</td>
