--- a/public/definitions.html
+++ b/public/definitions.html
@@ -11,8 +11,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <script>
+        async function fetchAllTerms() {
+            const response = await fetch('http://localhost:8080/terms');
+            const data = await response.json();
+            if (response.ok) {
+                return data;
+            } else {
+                throw new Error(data.error);
+            }
+        }
+
         async function fetchTerm(term) {
-            const response = await fetch(`http://localhost:6000/term-definition/${term}`);
+            const response = await fetch(`http://localhost:8080/term-definition/${term}`);
             const data = await response.json();
             if (response.ok) {
                 return data;
@@ -38,6 +48,35 @@
                 resultDiv.innerHTML = `<p>${error.message}</p>`;
             }
         }
+
+        function filterTerms() {
+            const searchInput = document.getElementById('searchInput').value.toLowerCase();
+            const rows = document.querySelectorAll('#termsTable tbody tr');
+
+            rows.forEach(row => {
+                const term = row.querySelector('td').textContent.toLowerCase();
+                if (term.includes(searchInput)) {
+                    row.style.display = '';
+                } else {
+                    row.style.display = 'none';
+                }
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            try {
+                const terms = await fetchAllTerms();
+                const tableBody = document.querySelector('#termsTable tbody');
+                tableBody.innerHTML = terms.map(term => `
+                    <tr>
+                        <td>${term.term}</td>
+                        <td>${term.definition}</td>
+                    </tr>
+                `).join('');
+            } catch (error) {
+                console.error('Error fetching terms:', error);
+            }
+        });
     </script>
 </head>
 <body>
@@ -49,14 +88,21 @@
         <button onclick="window.location.href='gallery.html';">Breed Gallery</button>
         <button onclick="window.location.href='unit_conversion.html';">Unit Converter</button>
     </div>
+    <h2>Common Horse Terms</h2>
+    <h3>Look up a term or scroll through the dictionary to learn more!</h3>
     <div>
-        <input type="text" id="searchInput" placeholder="Search for a term...">
-        <button onclick="showDefinition()">Search</button>
+        <input type="text" id="searchInput" onkeyup="filterTerms()" placeholder="Search for a term...">
     </div>
     <div id="result">
-        <p>Placeholder for horse terms</p>
+        <table id="termsTable">
+            <thead>
+                <tr><th>Term</th><th>Definition</th></tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be populated -->
+            </tbody>
+        </table>
     </div>
     <footer>&copy; 2024 Maren Cole</footer>
 </body>
 </html>
-
